fix: add spacing after iframe embeds

--- a/client/src/scss/hacks.scss
+++ b/client/src/scss/hacks.scss
@@ -113,3 +113,7 @@
   bottom: 0;
   z-index: 5;
 }
+
+.iframeEmbed:not(:last-child) {
+  margin-bottom: 1rem;
+}
